--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hydrogen App</title>
     <link rel="stylesheet" href="/src/index.css" />
+    <!-- <script src="https://product-gallery.cloudinary.com/all.js" type="text/javascript"></script> -->
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/@shopify/hydrogen/entry-client"></script>
+    <!-- <script type="text/javascript">
+      const myGallery = cloudinary.galleryWidget({
+          container: "#gallery",
+          cloudName: "jilis",
+          mediaAssets: [
+            { tag: "sweat-pants", mediaType: "image" }
+          ]
+        });
+
+        myGallery.render();
+    </script> -->
   </body>
 </html>
